--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -3,7 +3,6 @@ html{
   overflow: hidden;
 }
 body{
-  overflow: hidden;
   transition:.3s ease-in-out;
 }
 a:hover{
